# Weather-collector

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-prod.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
docker/: app.sh
migrations/: env.py
migrations/versions/: 05d253cd8102_changed_weather_model_datatype_on_rain_.py  c1e89a30fe5e_added_weather_model.py  c740ee99497a_added_unique_values_for_city_name_model.py  d40f260fed81_added_city_model.py  dad31c569456_changed_nullable_to_false_in_weather_.py  fb6cec490ff1_changed_precision_in_city_latitude_and_.py
src/: config.py  database.py
src/services/: base_service.py
src/services/cities/: models.py  schemas.py  service.py
src/services/weather/: models.py  schemas.py  service.py
