[tool.poetry]
name = "weather-collector"
version = "0.1.0"
description = ""
authors = ["berezzin <biarezzin@gmail.com>"]
readme = "README.md"
packages = [{include = "weather_collector"}]

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.3.1"
flower = "^2.0.0"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
redis = "^4.6.0"
aiohttp = "^3.8.5"
asyncpg = "^0.28.0"
python-dotenv = "^1.0.0"
pydantic = "1.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
